<resources>
    <string name="app_name">TimimngRecord</string>
    <string name="start">Iniciar</string>
    <string name="pause">Pausar</string>
    <string name="finalize">Finalizar sesión</string>
    <string name="new_time">Agregar Tiempo</string>
    <string name="distance">distance</string>
    <string name="description">description</string>
    <string name="cancel">cancelar</string>
    <string name="save">guardar</string>
    <string name="start_clicked"> Iniciar el cronómetro</string>
    <string name="pause_clicked"> El tiempo tiene que estar pausado</string>
    <string name="title"> Desea</string>
    <string name="restart"> Reiniciar</string>
</resources>
